crates/apollo-compiler/test_data/diagnostics/0066_subselection_of_scalar.txt
Error: field selection of scalar type `URL` must not have subselections
   ╭─[0066_subselection_of_scalar.graphql:2:3]
   │
 2 │   url1 { name }
   │   ──────┬──────  
   │         ╰──────── remove subselections here
   │ 
   │ Note: path to the field: `query SelectionOfScalar → url1`
───╯
Error: field selection of scalar type `URL` must not have subselections
   ╭─[0066_subselection_of_scalar.graphql:3:3]
   │
 3 │   url2 { name }
   │   ──────┬──────  
   │         ╰──────── remove subselections here
   │ 
   │ Note: path to the field: `query SelectionOfScalar → url2`
───╯
Error: field selection of scalar type `URL` must not have subselections
   ╭─[0066_subselection_of_scalar.graphql:4:3]
   │
 4 │   url3 { name }
   │   ──────┬──────  
   │         ╰──────── remove subselections here
   │ 
   │ Note: path to the field: `query SelectionOfScalar → url3`
───╯
Error: field selection of scalar type `URL` must not have subselections
   ╭─[0066_subselection_of_scalar.graphql:5:3]
   │
 5 │   url4 { name }
   │   ──────┬──────  
   │         ╰──────── remove subselections here
   │ 
   │ Note: path to the field: `query SelectionOfScalar → url4`
───╯
Error: field selection of scalar type `URL` must not have subselections
   ╭─[0066_subselection_of_scalar.graphql:6:3]
   │
 6 │   url5 { name }
   │   ──────┬──────  
   │         ╰──────── remove subselections here
   │ 
   │ Note: path to the field: `query SelectionOfScalar → url5`
───╯
Error: field selection of scalar type `URL` must not have subselections
   ╭─[0066_subselection_of_scalar.graphql:7:3]
   │
 7 │   url6 { name }
   │   ──────┬──────  
   │         ╰──────── remove subselections here
   │ 
   │ Note: path to the field: `query SelectionOfScalar → url6`
───╯

